Mise a jour Scene Start (Logo Erasmus + URL)

--- a/Extinction/Assembly-CSharp.csproj
+++ b/Extinction/Assembly-CSharp.csproj
@@ -129,11 +129,7 @@
     <Compile Include="Assets\2DGamekit\Scripts\Effect\SpriteColorChange.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Effect\WaterArea.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\CameraBackgroundSetter.cs" />
-    <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\Displayable.cs" />
-    <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\GameDataManager.cs" />
-    <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\GaugeInfo.cs" />
-    <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\GaugeInfoEditor.cs" />
-    <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\InfoDisplayer.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\IntroController.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\LevelInfo.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\LevelSelection\RememberTeleporterPosition.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Localization\OriginalPhrases.cs" />
@@ -191,12 +187,22 @@
     <Compile Include="Assets\2DGamekit\Scripts\Utility\DialogueCanvasController.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\DialogueElement.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\DisableFallenObjects.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\Displayable.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\EnemyMenuInfo.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\GameDataManager.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\GaugeInfo.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\GaugeInfoEditor.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\Helpers.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\InfoDisplayer.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\InteractDialogue.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\LearningAnalyticsGenerator.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\LocalTransformDuplicator.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\OpenURL.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\PhysicsHelper.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\PlayerEnemiesDisplayer.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\PlayerHistoryDisplayer.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\PlayerHistoryElement.cs" />
+    <Compile Include="Assets\2DGamekit\Scripts\Utility\PlayerSkillsDisplayer.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\PrewarmDirector.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\PriorityQueue.cs" />
     <Compile Include="Assets\2DGamekit\Scripts\Utility\RuleTile.cs" />
