--- a/Extinction/Assembly-CSharp-Editor.csproj
+++ b/Extinction/Assembly-CSharp-Editor.csproj
@@ -374,6 +374,9 @@
     <Reference Include="Unity.Analytics.Tracker">
       <HintPath>C:/Users/hlabarthe/Documents/GitHub/extinction/Extinction/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Purchasing">
+      <HintPath>C:/Users/hlabarthe/Documents/GitHub/extinction/Extinction/Library/PackageCache/com.unity.purchasing@2.0.3/UnityEngine.Purchasing.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor.Purchasing">
       <HintPath>C:/Users/hlabarthe/Documents/GitHub/extinction/Extinction/Library/PackageCache/com.unity.purchasing@2.0.3/Editor/UnityEditor.Purchasing.dll</HintPath>
     </Reference>
