--- a/Extinction/Assembly-CSharp.csproj
+++ b/Extinction/Assembly-CSharp.csproj
@@ -564,6 +564,9 @@
     <Reference Include="Unity.Analytics.Tracker">
       <HintPath>C:/Users/hlabarthe/Documents/GitHub/extinction/Extinction/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Purchasing">
+      <HintPath>C:/Users/hlabarthe/Documents/GitHub/extinction/Extinction/Library/PackageCache/com.unity.purchasing@2.0.3/UnityEngine.Purchasing.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.2.16f1/Editor/Data/MonoBleedingEdge/lib/mono/2.0-api/mscorlib.dll</HintPath>
     </Reference>
